2003/11/08 11:30 pcg

        * GType.xs: In addition to the change yesterday, make sure
        that gperl_convert_back_flags only ever returns distinct,
        non-overlapping flag values. This requires an inherent ordering
        in the flag values, but if this isn't the case we can always sort
        the values first on bit-count (doh), or use a heuristic such as
        prefering single bit values.

2003/11/08 01:03 (-0500) muppetman

	* GClosure.xs: simplify, man...  both dSP and the PERL_UNUSED_VAR()
	should've been outside the conditional.  this may need to be
	macro-ified to prevent bugs in custom marshallers.

	* Glib.xs, GType.xs, gperl.h: move private function streq_enum
	to Glib.xs as new public function gperl_str_eq(), string compare that
	considers dash and underscore equivalent.  add gperl_str_hash(), a
	hashing function that considers dash and understore equivalent.

	* Glib.exports: updated with new functions

	* GSignal.xs: use custom hash and compare functions for the signal
	marshallers hash.

	* gperl.h: add prototypes for gperl_fundamental_type_from_package()
	and gperl_fundamental_package_from_type().

	* GObject.xs: remove unused var (which was shadowing an already-defined
	var in the parent scope).

2003/11/07 20:13 pcg

        * GType.xs: test SvPOK instead of SVt_PV, as many scalars
          can be valid strings.
	* GType.xs: apply muppet's patch to bless flags, modified to
          - implement overloaded operations on flags.
          - change the flag test from "set & mask" to "set & mask == mask",
            which hopefully fixes the GdkModifier problem.
          - since the testsuites of both glib and gtk work fine, as
            well as my apps, I checked it in (low-risk-patch).
        * Glib.pm: add overload glue + documentation.
        * In a second, future step, we might want to replace GFlags by
          bless(RV(IV)) while keeping the user-api intact. This might